[tool.poetry]
name = "_kivi_project"
version = "0.1.0"
description = ""
authors = ["Carlos Rojas <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
